--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,41 @@
 <main>
   <div class="container-fluid h-100">
     <div class="row vh-100 mh-100">
-      <div class="col-4 text-light bg-dark">
-        my side bar
+      <div class="col-3 text-light bg-dark side-bar">
+        <div class="circle-img"></div>
+        <div class="col-fluid p-lg-4 position-relative">
+          <svg (click)="goto('home')" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-house ms-5" viewBox="0 0 16 16">
+            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+          </svg>
+          <span class="fs-1 text-white span">Home</span>
+        </div>
+        <div class="col-fluid p-4 position-relative">
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person ms-5" viewBox="0 0 16 16">
+            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664z"/>
+          </svg>
+          <span class="fs-1 text-white span">About</span>
+        </div>
+        <div class="col-fluid p-4 position-relative">
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-earmark-person ms-5" viewBox="0 0 16 16">
+            <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+            <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5z"/>
+          </svg>
+          <span class="fs-1 text-white span">Resume</span>
+        </div>
       </div>
-      <div class="col-8 text-center">
-        <span style="position: relative; top: 47%;" class="fs-1">Juliano Soder<p class="fs-6 text-start">I'm a Software Engineer</p></span>
+      <div class="col-9 text-center bg-secondary home">
+        <span style="position: relative; top: 45%; z-index: 10; color: white; font-size: 70px;" class="fw-bolder">Juliano Soder<p class="fs-2 text-center">I'm a Software Engineer</p></span>
+        <div class="carousel-inner">
+          <div :class="carousel-item" [ngClass]="isActive1">
+            <img class="d-block carroucel-img" src="../assets/meandmyson.jpeg" alt="First slide">
+          </div>
+          <div :class="carousel-item" [ngClass]="isActive2">
+            <img class="d-block carroucel-img" src="../assets/meandmyson2.jpeg" alt="Second slide">
+          </div>
+          <div :class="carousel-item" [ngClass]="isActive3">
+            <img class="d-block carroucel-img" src="../assets/me3.jpeg" alt="Third slide">
+          </div>
+        </div>
       </div>
     </div>
   </div>
