starting about component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
     <div class="row vh-100 mh-100">
       <div class="col-3 text-light bg-dark side-bar">
         <div class="circle-img"></div>
-        <div class="col-fluid p-lg-4 position-relative">
-          <svg (click)="goto('home')" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-house ms-5" viewBox="0 0 16 16">
+        <div (click)="goto('home')" class="col-fluid p-lg-4 position-relative">
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-house ms-5" viewBox="0 0 16 16">
             <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
           </svg>
           <span class="fs-1 text-white span">Home</span>
         </div>
-        <div class="col-fluid p-4 position-relative">
+        <div (click)="goto('about')"  class="col-fluid p-4 position-relative">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person ms-5" viewBox="0 0 16 16">
             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664z"/>
           </svg>
@@ -22,8 +22,21 @@
           </svg>
           <span class="fs-1 text-white span">Resume</span>
         </div>
+        <div class="col-fluid p-4 position-relative">
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-kanban ms-5" viewBox="0 0 16 16">
+            <path d="M13.5 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-11a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zm-11-1a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+            <path d="M6.5 3a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1zm-4 0a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1zm8 0a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1z"/>
+          </svg>
+          <span class="fs-1 text-white span">Portfolio</span>
+        </div>
+        <div class="col-fluid p-4 position-relative">
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-envelope ms-5" viewBox="0 0 16 16">
+            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+          </svg>
+          <span class="fs-1 text-white span">Contact</span>
+        </div>
       </div>
-      <div class="col-9 text-center bg-secondary home">
+      <div *ngIf="page == 'home'" class="col-9 text-center bg-secondary home">
         <span style="position: relative; top: 45%; z-index: 10; color: white; font-size: 70px;" class="fw-bolder">Juliano Soder<p class="fs-2 text-center">I'm a Software Engineer</p></span>
         <div class="carousel-inner">
           <div :class="carousel-item" [ngClass]="isActive1">
@@ -36,6 +49,9 @@
             <img class="d-block carroucel-img" src="../assets/me3.jpeg" alt="Third slide">
           </div>
         </div>
+      </div>
+      <div *ngIf="page == 'about'" class="col-9 bg-secondary">
+        <app-about />
       </div>
     </div>
   </div>
