--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,18 +37,7 @@
         </div>
       </div>
       <div *ngIf="page == 'home'" class="col-9 text-center bg-secondary home">
-        <span style="position: relative; top: 45%; z-index: 10; color: white; font-size: 70px;" class="fw-bolder">Juliano Soder<p class="fs-2 text-center">I'm a Software Engineer</p></span>
-        <div class="carousel-inner">
-          <div :class="carousel-item" [ngClass]="isActive1">
-            <img class="d-block carroucel-img" src="../assets/meandmyson.jpeg" alt="First slide">
-          </div>
-          <div :class="carousel-item" [ngClass]="isActive2">
-            <img class="d-block carroucel-img" src="../assets/meandmyson2.jpeg" alt="Second slide">
-          </div>
-          <div :class="carousel-item" [ngClass]="isActive3">
-            <img class="d-block carroucel-img" src="../assets/me3.jpeg" alt="Third slide">
-          </div>
-        </div>
+        <app-home />
       </div>
       <div *ngIf="page == 'about'" class="col-9 bg-secondary">
         <app-about />
