--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,54 @@
 .carroucel-img {
   top: 0;
   margin-left: -10px;
-  width: 1980px;
-  min-height: 2100px;
-  height: 100%;
   filter: grayscale(.9);
   position: fixed;
+}
+
+@media (min-width: 1000px) {
+  .carousel-item {
+    display: flex;
+    justify-content: center;
+  }
+
+  .carroucel-img {
+    align-self: center;
+    width: 1000px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .carroucel-img {
+    width: 100%;
+  }
+}
+
+.icon {
+  position: absolute;
+  display: flex;
+  right: 10px;
+  width: 100px;
+  height: 100px;
+  margin-top: 10%;
+  z-index: 10;
+  border-radius: 8px;
+  background-color: #f5f5f5a6;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon:hover {
+  color: cornflowerblue;
+}
+
+.icon:active {
+  scale: 0.9;
+}
+
+.active {
+  display: flex !important;
+}
+
+.desactive {
+  display: none !important;
 }
