--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="container-fluid h-100">
+  <div class="container-fluid">
     <div class="row vh-100 mh-100">
       <div class="col-3 text-light bg-dark side-bar">
         <div class="circle-img"></div>
