--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,16 @@
-<span style="position: relative; top: 45%; z-index: 10; color: white; font-size: 70px;" class="fw-bolder">Juliano Soder<p class="fs-2 text-center">I'm a Software Engineer</p></span>
+<span style="position: relative; top: 35%; z-index: 10; color: white; font-size: 70px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5), -2px -2px 4px rgba(255, 255, 255, 0.5);" class="fw-bolder">Juliano Soder<p class="fs-2 text-center">I'm a Software Engineer</p></span>
 <div class="carousel-inner">
   <div :class="carousel-item" [ngClass]="isActive1">
     <img class="d-block carroucel-img" src="../assets/meandmyson.jpeg" alt="First slide">
   </div>
   <div :class="carousel-item" [ngClass]="isActive2">
-    <img class="d-block carroucel-img" src="../assets/meandmyson2.jpeg" alt="Second slide">
+    <img class="d-block carroucel-img" style="transform: rotate(-90deg); margin-top: -10%;" src="../assets/meandmyson2.jpeg" alt="Second slide">
   </div>
   <div :class="carousel-item" [ngClass]="isActive3">
     <img class="d-block carroucel-img" src="../assets/me3.jpeg" alt="Third slide">
   </div>
+</div>
+<div (click)="rotateClasses()" class="icon">Next<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"/>
+</svg>
 </div>
