--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,59 @@
-<p>about works!</p>
+<div class="container-fluid">
+  <div class="row-fluid d-flex flex-row mt-5">
+    <div class="col-1"></div>
+    <div class="col-11">
+      <div class="row-fluid title"><h1>About</h1></div>
+      <div class="row-fluid title-content">A dedicated and experienced professional with a diverse background in both industrial leadership and software development. With 12 years of experience in the metalworking industry, including 7 years as a production line leader, I have honed my skills in management and operational efficiency. Seeking a new challenge, I transitioned into software development, specializing in web development, both front-end and back-end. With a strong educational foundation including a degree and postgraduate studies in technology, I have leveraged my passion for technology to excel in this dynamic field.</div>
+    </div>
+  </div>
+  <div class="row-fluid d-flex flex-row mt-3">
+    <div class="col-1"></div>
+    <div class="col-3"><img style="width: 100%;" src="../../assets/me4.jpeg" alt=""></div>
+    <div class="col-8 m-lg-3">
+      <h1>Software Engineer</h1>
+      <p>asdaddasdas</p>
+      <table class="table table-borderless table-light">
+        <tbody class="table-group-divider">
+          <tr>
+            <td class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+              <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+            </svg>
+            </td>
+            <td>Mark</td>
+            <td class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+              <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+            </svg>
+            <td>Otto</td>
+          </tr>
+          <tr>
+            <td class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+              <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+            </svg>
+            <td>Jacob</td>
+            <td class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+              <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+            </svg>
+            <td>Thornton</td>
+          </tr>
+          <tr>
+            <td class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+              <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+            </svg>
+            <td>Jacob</td>
+            <td class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+              <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+            </svg>
+            <td>Thornton</td>
+          </tr>
+        </tbody>
+      </table>
+      <p>bsadbsbd</p>
+    </div>
+  </div>
+</div>
