making about personal info

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,10 +9,10 @@
   <div class="row-fluid d-flex flex-row mt-3">
     <div class="col-1"></div>
     <div class="col-3"><img style="width: 100%;" src="../../assets/me4.jpeg" alt=""></div>
-    <div class="col-8 m-lg-3">
+    <div class="col-7 m-lg-3">
       <h1>Software Engineer</h1>
-      <p>asdaddasdas</p>
-      <table class="table table-borderless table-light">
+      <p>As an engineer I develop front-end and back-end software</p>
+      <table class="table table-borderless table">
         <tbody class="table-group-divider">
           <tr>
             <td class="dot">
@@ -20,40 +20,58 @@
               <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
             </svg>
             </td>
-            <td>Mark</td>
+            <td><b>Birthday:</b> January 1, 1989</td>
             <td class="dot">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
               <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
             </svg>
-            <td>Otto</td>
+            <td><b>Age:</b> {{year-1989}}</td>
           </tr>
           <tr>
             <td class="dot">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
               <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
             </svg>
-            <td>Jacob</td>
+            <td><b>Website:</b><a href="https://google.com" class="href"> google.com</a></td>
             <td class="dot">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
               <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
             </svg>
-            <td>Thornton</td>
+            <td><b>Degree:</b> Postgraduate</td>
           </tr>
           <tr>
             <td class="dot">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
               <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
             </svg>
-            <td>Jacob</td>
+            <td><b>Phone:</b> +55 49 98888-2906</td>
             <td class="dot">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
               <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
             </svg>
-            <td>Thornton</td>
+            <td><b>Email:</b> {{email}}</td>
+          </tr>
+          <tr>
+            <td class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+              <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+            </svg>
+            <td><b>City:</b> Mondaí, Brazil</td>
+            <td class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+              <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+            </svg>
+            <td><b>Freelance:</b> Not available</td>
           </tr>
         </tbody>
       </table>
-      <p>bsadbsbd</p>
+      <p>Passionate about technology, with a strong interest in software development and emerging technologies. Committed to personal and professional growth, and dedicated to creating a positive impact through technological innovation.</p>
+    </div>
+  </div>
+  <div class="row-fluid d-flex mt-5">
+    <div class="col-1"></div>
+    <div class="col-11">
+      <h1>Facts</h1>
     </div>
   </div>
 </div>
