--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -71,7 +71,10 @@
   <div class="row-fluid d-flex mt-5">
     <div class="col-1"></div>
     <div class="col-11">
-      <h1>Facts</h1>
+      <div class="row-fluid"><h1>Facts</h1></div>
+      <div class="row-fluid">
+        <p>In my postgraduate scientific article I showed that it is possible to generate a certain level of information during data collection, even before data normalization, as a result I scored 9.3 out of a total of 10, towards the completion of my course.</p>
+      </div>
     </div>
   </div>
 </div>
