--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
   <div class="row-fluid d-flex flex-row mt-5">
-    <div class="col-1"></div>
-    <div class="col-11">
+    <div class="col-1 off"></div>
+    <div class="col-11 mobile">
       <div class="row-fluid title"><h1>About</h1></div>
       <div class="row-fluid title-content">A dedicated and experienced professional with a diverse background in both industrial leadership and software development. With 12 years of experience in the metalworking industry, including 7 years as a production line leader, I have honed my skills in management and operational efficiency. Seeking a new challenge, I transitioned into software development, specializing in web development, both front-end and back-end. With a strong educational foundation including a degree and postgraduate studies in technology, I have leveraged my passion for technology to excel in this dynamic field.</div>
     </div>
   </div>
   <div class="row-fluid d-flex flex-row mt-3">
-    <div class="col-1"></div>
-    <div class="col-3"><img style="width: 100%;" src="../../assets/me4.jpeg" alt=""></div>
-    <div class="col-7 m-lg-3">
+    <div class="col-1 off"></div>
+    <div class="col-3 off"><img style="width: 100%;" src="../../assets/me4.jpeg" alt=""></div>
+    <div class="col-7 m-lg-3 mobile">
       <h1>Software Engineer</h1>
       <p>As an engineer I develop front-end and back-end software</p>
       <table class="table table-borderless table">
@@ -69,8 +69,8 @@
     </div>
   </div>
   <div class="row-fluid d-flex mt-5">
-    <div class="col-1"></div>
-    <div class="col-11">
+    <div class="col-1 off"></div>
+    <div class="col-11 mobile">
       <div class="row-fluid"><h1>Facts</h1></div>
       <div class="row-fluid">
         <p>In my postgraduate scientific article I showed that it is possible to generate a certain level of information during data collection, even before data normalization, as a result I scored 9.3 out of a total of 10, towards the completion of my course.</p>
