--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="row-fluid d-flex flex-row mt-3">
     <div class="col-1 off"></div>
-    <div class="col-3 off"><img style="width: 100%;" src="../../assets/me4.jpeg" alt=""></div>
+    <div class="col-3 off"><img class="mt-4" style="width: 100%;" src="../../assets/me4.jpeg" alt=""></div>
     <div class="col-7 m-lg-3 mobile">
       <h1>Software Engineer</h1>
       <p>As an engineer I develop front-end and back-end software</p>
