--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -7,6 +7,10 @@ table {
   --bs-table-bg: whitesmoke !important;
 }
 
+.go-back {
+  display: none;
+}
+
 @media (max-width: 1000px){
   .off {
     display: none;
@@ -36,5 +40,20 @@ table {
 
   a {
     color: white;
+  }
+
+  .go-back {
+    display: block;
+    position: absolute;
+    right: 25px;
+  }
+
+  .title {
+    display: flex;
+  }
+
+  .close {
+    transform: translateY(100%);
+    transition: transform 0.6s ease-in-out;
   }
 }
