--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,15 @@
-<div class="container-fluid">
+<div class="container-fluid" [className]="close">
   <div class="row-fluid d-flex flex-row mt-5">
     <div class="col-1 off"></div>
     <div class="col-11 mobile">
-      <div class="row-fluid title"><h1>About</h1></div>
-      <div class="row-fluid title-content">A dedicated and experienced professional with a diverse background in both industrial leadership and software development. With 12 years of experience in the metalworking industry, including 7 years as a production line leader, I have honed my skills in management and operational efficiency. Seeking a new challenge, I transitioned into software development, specializing in web development, both front-end and back-end. With a strong educational foundation including a degree and postgraduate studies in technology, I have leveraged my passion for technology to excel in this dynamic field.</div>
+      <div class="row-fluid title">
+        <h1>About</h1>
+        <svg (click)="goback()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-down-left go-back" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 0 0-.5-.5H2.5A1.5 1.5 0 0 0 1 3.5v10A1.5 1.5 0 0 0 2.5 15h10a1.5 1.5 0 0 0 1.5-1.5V6.864a.5.5 0 0 0-1 0V13.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+          <path fill-rule="evenodd" d="M5 10.5a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 0-1H6.707l8.147-8.146a.5.5 0 0 0-.708-.708L6 9.293V5.5a.5.5 0 0 0-1 0z"/>
+        </svg>
+      </div>
+      <div class="row-fluid title-content">I am a single father of a 5-year-old son, whom I take care of alone. I am of German descent, but I do not speak German. I live in the south of Brazil, where I have divided my career between corporate life and now the technology sector. In my spare time, I divide half of my time between caring for my son and leisure time with him, and the other half working on projects of my own or of friends as a way to study and stay up-to-date. Working on my own projects is a hobby, as is when I rarely have extra time to go for a walk and play video games.</div>
     </div>
   </div>
   <div class="row-fluid d-flex flex-row mt-3">
