--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,10 +1,23 @@
 <main>
-  <div class="container-fluid p-xxl-1">
-    <div class="row-fluid"><h1>Resume</h1></div>
+  <div class="container-fluid p-xxl-4">
+    <div class="row-fluid"><h2 class="mt-lg-5 fw-bold">Resume</h2></div>
     <div class="row-fluid mt-xl-2">
-      <p class="w-100 text-warning">
+      <p class="w-100 text-wrap">
         A dedicated and experienced professional with a diverse background in both industrial leadership and software development. With 12 years of experience in the metalworking industry, including 7 years as a production line leader, I have honed my skills in management and operational efficiency. Seeking a new challenge, I transitioned into software development, specializing in web development, both front-end and back-end. With a strong educational foundation including a degree and postgraduate studies in technology, I have leveraged my passion for technology to excel in this dynamic field.
       </p>
+    </div>
+    <div class="row mt-xl-2">
+      <div class="col-6">
+        <div class="row">
+          <h3 class="fw-bold">Education</h3>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="row">
+          <h3 class="fw-bold">Professional Experience</h3>
+        </div>
+
+      </div>
     </div>
   </div>
 </main>
