--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,9 @@
           <path fill-rule="evenodd" d="M5 10.5a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 0-1H6.707l8.147-8.146a.5.5 0 0 0-.708-.708L6 9.293V5.5a.5.5 0 0 0-1 0z"/>
         </svg>
       </div>
-      <div class="row-fluid title-content">I am a single father of a 5-year-old son, whom I take care of alone. I am of German descent, but I do not speak German. I live in the south of Brazil, where I have divided my career between corporate life and now the technology sector. In my spare time, I divide half of my time between caring for my son and leisure time with him, and the other half working on projects of my own or of friends as a way to study and stay up-to-date. Working on my own projects is a hobby, as is when I rarely have extra time to go for a walk and play video games.</div>
+      <div class="row-fluid title-content">I am a single father of a 5-year-old son, whom I take care of alone. I am of German descent and I live in the south of Brazil, where I have divided my career between corporate life and now the technology sector. In my spare time, I divide half of my time between caring for my son and leisure time with him, and the other half working on projects of my own or of friends as a way to study and stay up-to-date. Working on my own projects is a hobby, as is when I rarely have extra time to go for a walk and play video games.
+
+      </div>
     </div>
   </div>
   <div class="row-fluid d-flex flex-row mt-3">
