--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,36 +15,42 @@
           </svg>
           <span class="fs-1 text-white span">About</span>
         </div>
-        <div class="col-fluid p-4 w-100 d-flex position-relative item-menu">
+        <div (click)="goto('resume')" class="col-fluid p-4 w-100 d-flex position-relative item-menu">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-earmark-person" viewBox="0 0 16 16">
             <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
             <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5z"/>
           </svg>
           <span class="fs-1 text-white span">Resume</span>
         </div>
-        <div class="col-fluid p-4 w-100 d-flex position-relative item-menu">
+        <div (click)="goto('portfolio')" class="col-fluid p-4 w-100 d-flex position-relative item-menu">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-kanban" viewBox="0 0 16 16">
             <path d="M13.5 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-11a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zm-11-1a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
             <path d="M6.5 3a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1zm-4 0a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1zm8 0a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1z"/>
           </svg>
           <span class="fs-1 text-white span">Portfolio</span>
         </div>
-        <div class="col-fluid p-4 w-100 d-flex position-relative item-menu">
+        <div (click)="goto('contact')" class="col-fluid p-4 w-100 d-flex position-relative item-menu">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
             <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
           </svg>
           <span class="fs-1 text-white span">Contact</span>
         </div>
       </div>
-      <div *ngIf="page == 'home'" class="col-9 text-center bg-secondary home">
-        <app-home (gotoChange)="gotoChild($event)"/>
-      </div>
-      <div *ngIf="page == 'about'" class="col-9 bg-secondary mobile" [ngClass]="mainclass">
-        <app-about (gotoChange)="gotoChild($event)" />
-      </div>
-      <div *ngIf="page == 'resume'" >
-        <app-resume ></app-resume>
-      </div>
+      @if(page == 'home'){
+        <div class="col-9 text-center bg-secondary home">
+          <app-home (gotoChange)="gotoChild($event)"/>
+        </div>
+      }
+      @if(page == 'about'){
+        <div class="col-9 bg-secondary mobile" [ngClass]="mainclass">
+          <app-about (gotoChange)="gotoChild($event)" />
+        </div>
+      }
+      @if(page == 'resume'){
+        <div class="col-9 bg-body-secondary">
+          <app-resume ></app-resume>
+        </div>
+      }
     </div>
   </div>
 </main>
