--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -10,13 +10,102 @@
       <div class="col-6">
         <div class="row">
           <h3 class="fw-bold">Education</h3>
+          <div class="row mt-1">
+            <div class="col-1">
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <div class="col-11">
+              <h4 class="fw-bold">Postgraduante in Data Science</h4>
+              <div class="row">
+                <h5 class="p-2">2019 - 2020</h5>
+              </div>
+              <div class="row">
+                <span class="fst-italic">Leonardo da Vinci University Center</span>
+              </div>
+              <div class="row mt-2">
+                <span>During my study in data science I developed a system that collected production data, from when I worked as a production leader in the industry, and showed that it was possible to create synapses of information about what the day's production would be like with data from past analyzes and generate information during data collection.</span>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="row mt-1">
+            <div class="col-1">
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <div class="col-11">
+              <h4 class="fw-bold">Technologist in systems analysis and development</h4>
+              <div class="row">
+                <h5 class="p-2">2015 - 2019</h5>
+              </div>
+              <div class="row">
+                <span class="fst-italic">Federal Institute of Education Feliz RS/UNIFAEL University Center</span>
+              </div>
+              <div class="row mt-2">
+                <span>
+                  In my final paper, I developed a motorcycle rental and tracking system.
+                </span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-6">
         <div class="row">
-          <h3 class="fw-bold">Professional Experience</h3>
+          <h3 class="fw-semibold">Professional Experience</h3>
+        </div>
+        <div class="row mt-1">
+          <div class="col-1">
+            <div class="dot"></div>
+            <div class="line"></div>
+          </div>
+          <div class="col-11">
+            <h4 class="fw-bold">
+              Software Engineer
+            </h4>
+            <div class="row">
+              <h5 class="p-2">2022 - Present</h5>
+            </div>
+            <div class="row">
+              <span class="fst-italic">ViaHub, São Paulo, SP</span>
+            </div>
+            <div class="row mt-2 ms-2">
+              <ul class="list-unstyled">
+                <li style="list-style-type: square;">I develop Spring Rest APIs with Java 11, 13 and 17. We are now migrating applications that are still on Java 11 to 21.</li>
+                <li style="list-style-type: square;">I use Mongo and Oracle databases daily, as well as Docker and other technologies such as: Feing, Kafka, GitActions, Junit, Kubernets, Swagger, Jira, Delinea and others.</li>
+                <li style="list-style-type: square;">I also work as a front-end, which makes me a full-stack developer. It's much less than the back-end but eventually I develop, fix bugs and update sites in: Angular, Vue and React. I am also responsible for a mobile application that is rarely modified, which in turn was made in DART/Flutter.</li>
+              </ul>
+            </div>
+          </div>
         </div>
 
+
+        <div class="row mt-1">
+          <div class="col-1">
+            <div class="dot"></div>
+            <div class="line"></div>
+          </div>
+          <div class="col-11">
+            <h4 class="fw-bold">
+              Software developer
+            </h4>
+            <div class="row">
+              <h5 class="p-2">2021 - 2022</h5>
+            </div>
+            <div class="row">
+              <span class="fst-italic">Inova Electronic Systems, Caxias do Sul, RS</span>
+            </div>
+            <div class="row mt-2 ms-2">
+              <ul class="list-unstyled">
+                <li style="list-style-type: square;">I worked as a developer in an electronic systems industry, where I developed a Rest API with Golang (GO).</li>
+                <li style="list-style-type: square;">Performed maintenance on the company's internal websites built with Angular 14.</li>
+                <li style="list-style-type: square;">I had brief experience with Java mobile development and also with Electron.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
