finished desk resume

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -6,9 +6,26 @@
         A dedicated and experienced professional with a diverse background in both industrial leadership and software development. With 12 years of experience in the metalworking industry, including 7 years as a production line leader, I have honed my skills in management and operational efficiency. Seeking a new challenge, I transitioned into software development, specializing in web development, both front-end and back-end. With a strong educational foundation including a degree and postgraduate studies in technology, I have leveraged my passion for technology to excel in this dynamic field.
       </p>
     </div>
+
     <div class="row mt-xl-2">
       <div class="col-6">
         <div class="row">
+          <h3 class="fw-bold">Sumary</h3>
+          <div class="row mt-1">
+            <div class="col-1">
+              <div class="dot"></div>
+              <div class="line"></div>
+            </div>
+            <div class="col-11">
+              <h4 class="fw-bold">Juliano Soder</h4>
+              <div class="row mt-2">
+                <span>I'm a Software Engineer graduate in Analysis and system development and postgraduate in Data Science and I work as fullstack developer in one of the biggest retail and ecommerce company from Brazil.</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mt-5">
           <h3 class="fw-bold">Education</h3>
           <div class="row mt-1">
             <div class="col-1">
