sjusted mobile resume

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
         </div>
       }
       @if(page == 'resume'){
-        <div class="col-9 bg-body-white">
+        <div class="col-9 bg-body-white mobile">
           <app-resume ></app-resume>
         </div>
       }
