--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="row mt-xl-2">
-      <div class="col-6">
+      <div class="col-6 mobile">
         <div class="row">
           <h3 class="fw-bold">Sumary</h3>
           <div class="row mt-1">
@@ -69,7 +69,8 @@
           </div>
         </div>
       </div>
-      <div class="col-6">
+      <div class="mobile-breaker"></div>
+      <div class="col-6 mobile">
         <div class="row">
           <h3 class="fw-semibold">Professional Experience</h3>
         </div>
