--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -40,7 +40,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
               <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
             </svg>
-            <td><b>Website:</b><a href="https://google.com" class="href"> google.com</a></td>
+            <td><b>Website:</b><a href="https://github.com/SoderJuliano" class="href"> github.com/SoderJuliano</a></td>
             <td class="dot">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
               <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
@@ -82,6 +82,7 @@
       <div class="row-fluid"><h1>Facts</h1></div>
       <div class="row-fluid">
         <p>In my postgraduate scientific article I showed that it is possible to generate a certain level of information during data collection, even before data normalization, as a result I scored 9.3 out of a total of 10, towards the completion of my course.</p>
+        <p>I lived for nine months in the state of Alabama in Prettvile where I worked in a metallurgical factory, so even though I don't use English daily today, I understand 99% of what a native speaker says.</p>
       </div>
     </div>
   </div>
