--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,6 +1,12 @@
 <main>
-  <div class="container-fluid p-xxl-4">
-    <div class="row-fluid"><h2 class="mt-lg-5 fw-bold">Resume</h2></div>
+  <div style="margin-top: 10px;" class="container-fluid p-xxl-4" [className]="close">
+    <div class="row">
+      <h2 class="mt-lg-5 fw-bold">Resume</h2>
+    </div>
+    <svg (click)="goback()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-down-left go-back" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 0 0-.5-.5H2.5A1.5 1.5 0 0 0 1 3.5v10A1.5 1.5 0 0 0 2.5 15h10a1.5 1.5 0 0 0 1.5-1.5V6.864a.5.5 0 0 0-1 0V13.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+      <path fill-rule="evenodd" d="M5 10.5a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 0-1H6.707l8.147-8.146a.5.5 0 0 0-.708-.708L6 9.293V5.5a.5.5 0 0 0-1 0z"/>
+    </svg>
     <div class="row-fluid mt-xl-2">
       <p class="w-100 text-wrap">
         A dedicated and experienced professional with a diverse background in both industrial leadership and software development. With 12 years of experience in the metalworking industry, including 7 years as a production line leader, I have honed my skills in management and operational efficiency. Seeking a new challenge, I transitioned into software development, specializing in web development, both front-end and back-end. With a strong educational foundation including a degree and postgraduate studies in technology, I have leveraged my passion for technology to excel in this dynamic field.
