--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,6 +25,7 @@
     <li (click)="goto('home')"><a class="dropdown-item" href="#">Home</a></li>
     <li (click)="goto('about')"><a class="dropdown-item" href="#">About</a></li>
     <li (click)="goto('resume')"><a class="dropdown-item" href="#">Resume</a></li>
-    <li (click)="goto('contact')"><a class="dropdown-item" href="#">Contact</a></li>
+    <li (click)="goto('portfolio')"><a class="dropdown-item" href="#">Portfolio</a></li>
+    <li (click)="gotoContact()"><a class="dropdown-item" href="#">Contact</a></li>
   </ul>
 </div>
