--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -98,7 +98,7 @@
             <div class="row mt-2 ms-2">
               <ul class="list-unstyled">
                 <li style="list-style-type: square;">I develop Spring Rest APIs with Java 11, 13 and 17. We are now migrating applications that are still on Java 11 to 21.</li>
-                <li style="list-style-type: square;">I use Mongo and Oracle databases daily, as well as Docker and other technologies such as: Feing, Kafka, GitActions, Junit, Kubernets, Swagger, Jira, Delinea and others.</li>
+                <li style="list-style-type: square;">I use Mongo and Oracle databases daily, as well as Docker and other technologies such as: Feing, Kafka, GitHub Actions, Junit, Kubernets, Swagger, Jira, Delinea and others.</li>
                 <li style="list-style-type: square;">I also work as a front-end, which makes me a full-stack developer. It's much less than the back-end but eventually I develop, fix bugs and update sites in: Angular, Vue and React. I am also responsible for a mobile application that is rarely modified, which in turn was made in DART/Flutter.</li>
               </ul>
             </div>
