--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -82,7 +82,7 @@
       <div class="row-fluid"><h1>Facts</h1></div>
       <div class="row-fluid">
         <p>In my postgraduate scientific article I showed that it is possible to generate a certain level of information during data collection, even before data normalization, as a result I scored 9.3 out of a total of 10, towards the completion of my course.</p>
-        <p>I lived for nine months in the state of Alabama in Prettvile where I worked in a metallurgical factory, so even though I don't use English daily today, I understand 99% of what a native speaker says.</p>
+        <p>I lived for nine months in the United States in Prattville, AL, where I worked in a metallurgical factory, so even though I don't use English daily today, I understand 99% of what a native speaker says.</p>
       </div>
     </div>
   </div>
