--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,26 +3,26 @@
     <div class="row vh-100 mh-100">
       <div class="col-3 text-light bg-dark d-flex side-bar">
         <div class="circle-img"></div>
-        <div (click)="goto('home')" class="col-fluid w-100 d-flex p-lg-4 position-relative item-menu">
+        <div (click)="goto('home')" class="col-fluid w-100 d-flex p-lg-4 position-relative item-menu" [id]="home">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
             <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
           </svg>
           <span class="fs-1 text-white span">Home</span>
         </div>
-        <div (click)="goto('about')"  class="col-fluid p-4 w-100 d-flex position-relative item-menu">
+        <div (click)="goto('about')"  class="col-fluid p-4 w-100 d-flex position-relative item-menu" [id]="about">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664z"/>
           </svg>
           <span class="fs-1 text-white span">About</span>
         </div>
-        <div (click)="goto('resume')" class="col-fluid p-4 w-100 d-flex position-relative item-menu">
+        <div (click)="goto('resume')" class="col-fluid p-4 w-100 d-flex position-relative item-menu" [id]="resume">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-earmark-person" viewBox="0 0 16 16">
             <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
             <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5z"/>
           </svg>
           <span class="fs-1 text-white span">Resume</span>
         </div>
-        <div (click)="goto('portfolio')" class="col-fluid p-4 w-100 d-flex position-relative item-menu">
+        <div (click)="goto('portfolio')" class="col-fluid p-4 w-100 d-flex position-relative item-menu" [id]="portfolio">
           <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-kanban" viewBox="0 0 16 16">
             <path d="M13.5 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-11a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zm-11-1a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
             <path d="M6.5 3a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1zm-4 0a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1zm8 0a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1z"/>
@@ -53,7 +53,7 @@
       }
       @if(page == 'portfolio'){
         <div class="col-9 mobile" style="background-color: #F5F8FD;">
-          <app-portfolio></app-portfolio>
+          <app-portfolio (gotoChange)="gotoChild($event)"></app-portfolio>
         </div>
       }
     </div>
