--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -28,6 +28,10 @@
   transition: all 0.3s ease-in-out;
 }
 
+.go-back {
+  display: none;
+}
+
 @media (max-width: 1000px) {
   .card-custom h3{
     font-size: 16px !important;
@@ -39,5 +43,17 @@
 
   .card-custom {
     height: 150px;
+  }
+
+  .close {
+    transform: translateY(100%);
+    transition: transform 0.6s ease-in-out;
+  }
+
+  .go-back {
+    display: block;
+    position: absolute;
+    right: 25px;
+    top: 51px;
   }
 }
