--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,10 +1,14 @@
-<main>
+<main [className]="close">
   <div class="container-fluid d-flex mt-5">
     <div class="col-1"></div>
     <div class="col-11">
       <div class="row">
         <h2 class="fw-bold">Portfolio</h2>
       </div>
+      <svg (click)="goback()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-down-left go-back" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 0 0-.5-.5H2.5A1.5 1.5 0 0 0 1 3.5v10A1.5 1.5 0 0 0 2.5 15h10a1.5 1.5 0 0 0 1.5-1.5V6.864a.5.5 0 0 0-1 0V13.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+        <path fill-rule="evenodd" d="M5 10.5a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 0-1H6.707l8.147-8.146a.5.5 0 0 0-.708-.708L6 9.293V5.5a.5.5 0 0 0-1 0z"/>
+      </svg>
       <div class="row">
         <p class="mb-0">Here are my own projects that I have worked on at some point or that are still in development. These are open source projects, so if you are curious to see the code, feel free to access my github.</p>
         <b>Note: My personal github, so there are no projects for companies I previously worked for.</b>
